<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/nav_register" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_reports"
            android:title="@string/nav_reports" />
    </group>

    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>