<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recoapp.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.recoapp.ui.register.RegisterFragment"
        android:label="@string/nav_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.recoapp.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.recoapp.ui.reports.ReportsFragment"
        android:label="@string/nav_reports"
        tools:layout="@layout/fragment_reports" />

</navigation>